Fjerner ubrukte metoder